# bpb

./: .gitignore  CMakeLists.txt  README.md
LinMake/: Makefile
Source/: allocator.cpp  allocator.h  definitions.h  fast_allocator.cpp  fast_allocator.h  groebner_basis.cpp  groebner_basis.h  init64.h  involutive.cpp  involutive.h  involutive64.cpp  involutive64.h  janettree.cpp  janettree.h  janettree64.cpp  janettree64.h  launcher.cpp  launcher.h  monom.cpp  monom.h  monom64.cpp  monom64.h  monomDL.cpp  monomDL.h  monomDRL.cpp  monomDRL.h  monomLex.cpp  monomLex.h  monomOld.cpp  monomOld.h  myginv.cpp  pcomparator.h  poly64.cpp  poly64.h  polynom.cpp  polynom.h  qset.cpp  qset.h  resource_counter.cpp  resource_counter.h  (+15 more)
Source/test_monom/: Makefile  main.cpp
Tests/: convert_gnv.py  make_tests.py
WinMake/: Makefile  bpb.rc  myginv.rc
resources/: bpb.rc.in  current_version.h.in
src/: fast_allocator.cpp  fast_allocator.h  groebner_basis.h  janettree.h  launcher.cpp  launcher.h  main.cpp  monom.cpp  monom.h  monomDL.cpp  monomDL.h  monomDRL.cpp  monomDRL.h  monomLex.cpp  monomLex.h  pcomparator.h  polynom.h  qset.h  resource_counter.cpp  resource_counter.h  settings_manager.cpp  settings_manager.h  timer.cpp  timer.h  triple.h  tset.h  variables.cpp  variables.h  version.cpp  version.h
tags/bjb/LinMake/: Makefile
tags/bjb/Source/: fast_allocator.cpp  fast_allocator.h  groebner_basis.cpp  groebner_basis.h  janettree.cpp  janettree.h  launcher.cpp  launcher.h  main.cpp  monom.cpp  monom.h  pcomparator.h  polynom.cpp  polynom.h  qset.cpp  qset.h  settings_manager.cpp  settings_manager.h  timer.cpp  timer.h  triple.cpp  triple.h  tset.cpp  tset.h  variables.cpp  variables.h  version.h
tags/bjb/Source/test_janettree/: Makefile  main.cpp
tags/bjb/Source/test_monom/: Makefile  main.cpp
tags/bjb/Source/test_polynom/: Makefile  main.cpp
tags/bjb/WinMake/: Makefile  bjb.rc
tags/buhberger/LinMake/: Makefile
tags/buhberger/Source/: iallocator.cpp  iallocator.h  igroebner64.cpp  igroebner64.h  imypoly64.cpp  imypoly64.h  init64.h  iutil.h  ivariables.cpp  ivariables.h  main.cpp  monom64.cpp  monom64.h  poly64.cpp  poly64.h  timer.cpp  timer.h  version.cpp  version.h
tags/buhberger/WinMake/: Makefile  buhberger.rc
tests/: CMakeLists.txt  janettree_tests.cpp  monom_tests.cpp  polynom_tests.cpp
trunk/LinMake/: Makefile
trunk/Source/: fast_allocator.cpp  fast_allocator.h  groebner_basis.h  janettree.h  launcher.cpp  launcher.h  monom.cpp  monom.h  monomDL.cpp  monomDL.h  monomDRL.cpp  monomDRL.h  monomLex.cpp  monomLex.h  polynom.h  resource_counter.cpp  resource_counter.h  settings_manager.cpp  settings_manager.h  triple.h  tset.h  variables.cpp  variables.h  version.h
trunk/Source/test_monom/: Makefile  main.cpp
trunk/WinMake/: Makefile  bpb.rc
